# ffgl-plugins

./: CMakeLists.txt  SETUP.md
.github/workflows/: build.yml
source/ChromaticDots/: ChromaticDots.cpp  ChromaticDots.h
source/Ouchi/: Ouchi.cpp  Ouchi.h
